--- a/README.org
+++ b/README.org
@@ -1,11 +1,18 @@
-Thanks to https://github.com/the-nix-way/home-manager-config-template for the template
-* Installing nix
+* dotfiles
+This repo does two things:
+- Deploys home-manager via ~home-manager switch --flake ~/dotfiles~
+  - See ~home.nix~ and ~packages.nix~ to get an idea of what this does
+  - This should just work on x86 Ubuntu machines (although it assumes your username is ~theo~).
+- Deploys NixOS via ~sudo nixos-rebuild switch --flake ~/dotfiles#lutfisk~
+  - See ~configuration.nix~
+  - This won't quite work on an arbitrary machine---some of the systemd jobs are impure.
+** Installing nix
 - https://zero-to-nix.com/start/install
   - Will automatically enable flakes
 #+BEGIN_SRC sh
 curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install
 #+END_SRC
-* Initial set up
+** Initial set up
 - It may be necessary to
   - upgrade nix via ~nix-channel --update; nix-env -iA nixpkgs.nix nixpkgs.cacert~
   - put ~experimental-features = nix-command flakes~ in ~/home/theo/.config/nix/nix.conf~
@@ -13,10 +20,10 @@ curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix 
 - This will install home manager
 - In the future you can just do ~home manager switch~
   - For a flake, ~home-manager switch --flake ~/dotfiles && fish~
-* Usage
+** Usage
 - packages in packages.nix
 - control dotfiles from home.nix
-* Clashing packages
+** Clashing packages
 - List groups of installed packages with ~nix-env -q~
 - Which outputs something like
 #+BEGIN_EXAMPLE
@@ -26,12 +33,14 @@ nix-2.13.3
 - And then ~nix-env -e my-packages~ will get rid of anything installed in my-packages
 - Presumably my-packages was installed in a way that clashes, e.g. using ~nix-env~
 - Do not use ~nix-env~ to remove everything, because that will remove nix too
-* Upgrading
+** Upgrading
 - ~nix flake update~
 - Takes the better part of an hour and makes my laptop work hard
-* Lock file error
+** Lock file error
 Fix with
 #+BEGIN_SRC bash
 sudo chown -R $USER:nixbld /nix/var/nix/profiles/per-user/$USER
 #+END_SRC
 https://github.com/nix-community/home-manager/issues/3734
+** Acknowledgements
+Thanks to https://github.com/the-nix-way/home-manager-config-template for the template
